# aoc-2025

./: .gitignore  README.md  pyproject.toml  run_code.py
code/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
